# auto-decode

./: Cargo.toml
src/: main.rs
src/files/: extractor.rs  mod.rs
src/ui/: mod.rs
